--- a/src/scss/sections/_portfolio.scss
+++ b/src/scss/sections/_portfolio.scss
@@ -44,6 +44,11 @@
   position: relative;
   aspect-ratio: 4/3;
   overflow: hidden;
+
+  // Less tall on desktop so cards don't dominate the viewport
+  @media (min-width: 768px) {
+    aspect-ratio: 3/2;
+  }
 }
 
 .portfolio__card-img {
